chore(shiftleft): apply fixes: update src/main/java/com/example/sonarsample/service/DemoSonarIssuesService.java