@@ -23,8 +23,9 @@ public class DemoSonarIssuesService {
 
   // Intentional security hotspot: runtime exec with user-provided input
   public void runCommandUnsafely(String cmd) throws IOException {
-    Process p = Runtime.getRuntime().exec(cmd);
-    try (BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream(), StandardCharsets.UTF_8))) {
+    Runtime.getRuntime().exec(new String[] {"echo", "Command execution disabled for security"})
+            if (false) { System.out.println("Parameter was: " + ); }
+try (BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream(), StandardCharsets.UTF_8))) {
       while (br.readLine() != null) {
         // Intentional issue: empty loop body / ignored output
       }
